Summary, not finished

--- a/tex/yhteenveto.tex
+++ b/tex/yhteenveto.tex
@@ -1,9 +1,15 @@
-Lämpöpumppujen merkitys sähkoverkossa kasvaa niiden tullessa yhä suositummiksi ja niiden korvatessa muita lämmitys- ja viilennysmuotoja. Lämpöpumppujen lisääntyminen ja esimerikiksi suorasta sähkölämmityksestä eroava käytttäytyminen vaikuttavat sähköverkkoon. Lämpöpumppujen tekniikka kehittyy ja nykyisin kotitalouskäyttöön myytävissä pumpuissa on yleensä suoraan verkkoon kytketyn oikosulkumoottorin tilalla taajuusmuuttajakäyttöinen oikosulkumoottori. Tämä kehitys myös osaltaan märittelee miten verkkoon liitettyjen lämpöpumppujen määrän kasvu vaikuttaa sähköverkkoon. Ilman taajuusmuuttajaa tai pehmokäynistintä verkkoon kytketyt lämpöpumput ottavat käynnistyessään verkosta suuria hetkellisiä tehoja, mikä saattaa jännitejäykkyydeltään huonossa verkossa aiheuttaa hetkellisiä jännitteenalenemia. Lämöpumpun ollessa taajuusmuuttajakäyttöinen, ei se aiheuta edellämainittuja tehonkulutuksen piikkejä. Kuitenkin mikäli lämpöpupulla korvataan jokin muu lämmitysmuoto, kuin suora sähkölämmitys, kasvattaa se kulutuspaikan energiankulutusta. Mikäli muuntopiirissä moni talous vaihtaa lämmitysmuodokseen lämpöpumpun, saattaa se aiheuttaa tarpeen sähöverkon jännitejäykkyyden parantamiselle.
+Lämpöpumppujen ja aurinkosähköjärjestelmien merkitys sähkoverkossa kasvaa niiden suosion kasvaessa. Lämpöpumput korvaavat muita lämmitys- ja viilennysmuotoja ja aurinkosähköjärjestelmillä haetaan kotitalouksissa omavaraisuutta ja säästöjä sähkölaskussa. 
 
-Järjestelmien aiheuttamia haasteita voidaan ratkaista ja löytää uusia niitä hyödyntäviä sovelluksia kun kommunikointi niiden kanssa onnistuu. Kommunikointi mahdollistetaan standardoiduilla kommunikointirajapinnoilla, joiden kautta järjestelmiä voidaan ohjata joko yksittäin tai osana suurempaa poolia.
+Aurinkosähköjärjestelmien määrän kasvu lisää sähköverkon tuotannon ailahtelevuutta ja säätövoiman tarvetta, sillä tuotanto vaihtelee tunneittain. Tuotantoa voidaan ennustaa sääennusteen pohjalta, mutta yksittäiset pilvet voivat aiheuttaa aluellisesti nopeitakin tehovaihteluita. Lisäksi huipputeho sijoittuu päiväsaikaan, joten ihmisten palatessa töistä ja kulutuksen kasvaessa tuotannon laskiessa samanaikaisesti säätötehon tarve kasvaa entisestään. 
 
-Yksi suosituimmista järjestelmien ohjauksen mahdollistavista tekniikoista perustuu Modbus-standardiin. Standardi määrittelee fyysisen tason rajapinnat mahdolistaen ohjauksen joko sarjaliitäntää tai ethernet-liitäntää käyttäen, mikä mahdollistaa protokollan käyttämisen paikallisesti tai internetin yli toimivien etäyhteyksien välityksellä. Modbus-standardin määritellessä kommuikointia vain hyvin matalalla tasolla on sitä helppo soveltaa erilaisiin sovelluksiin ja sen päälle voidaan rakentaa korkeamman tason viestintä- ja ohjausprotokollia. Modbuin päälle voidaan myöskin toteuttaa yksittäisen laitteen ohjaukseen ja monitorointiin tarvittavat sovellukset tai liittäminen kotiautomaatioon osaksi älykästä kotia. Myöskin erilaiset monitorointi- ja etäohjaussovellukset, niin omistajan kuin järjestelmä- tai palvelutoimittajan tarpeisiin toteutaan yleensä modbusin avulla.
+Lämpöpumppujen lisääntyminen ja esimerikiksi suorasta sähkölämmityksestä eroava käyttäytyminen vaikuttavat sähköverkkoon. Lämpöpumppujen tekniikka kehittyy ja nykyisin kotitalouskäyttöön myytävissä pumpuissa on yleensä suoraan verkkoon kytketyn oikosulkumoottorin tilalla taajuusmuuttajakäyttöinen oikosulkumoottori. Tämä kehitys myös osaltaan märittelee miten verkkoon liitettyjen lämpöpumppujen määrän kasvu vaikuttaa sähköverkkoon. Ilman taajuusmuuttajaa tai pehmokäynistintä verkkoon kytketyt lämpöpumput ottavat käynnistyessään verkosta suuria hetkellisiä tehoja, mikä saattaa jännitejäykkyydeltään huonossa verkossa aiheuttaa hetkellisiä jännitteenalenemia. Lämöpumpun ollessa taajuusmuuttajakäyttöinen, ei se aiheuta edellämainittuja tehonkulutuksen piikkejä. Kuitenkin mikäli lämpöpupulla korvataan jokin muu lämmitysmuoto, kuin suora sähkölämmitys, kasvattaa se kulutuspaikan energiankulutusta. Mikäli muuntopiirissä moni talous vaihtaa lämmitysmuodokseen lämpöpumpun, saattaa se aiheuttaa tarpeen sähköverkon jännitejäykkyyden parantamiselle.
 
-Yksi niistä on SunSpec...
+Järjestelmien tuomia haasteita voidaan ratkaista ja löytää uusia järjestelmiä hyödyntäviä sovelluksia, kun kommunikaatio niiden kanssa mahdollista. Kommunikointi mahdollistetaan standardoiduilla kommunikaatiorajapinnoilla, joiden kautta järjestelmiä voidaan ohjata. Tällöin ne voidaan kytkeä esimerkiksi kiinteistöautomaatioon tai muuhun ulkoiseen ohjaukseen. Valmistajien suljetut pilvipalvelut muodostavat myös erään rajapinnan kommunikaatiolle, joihin pääsy on usein vain valmistajalla ja järjestelmän omistajalla. 
 
-Lämpöpumppujen kohdalla korkeamman tason rajapintoja kuten SG-Ready-ohjausrajapintaa tai Saksalaista EVU-Sperre-ohjausrajapintaa käyttävät sovellukset taas keskittyvät yhden lämpöpumpun sijasta useamman pumpun muodostamaan pooliin. Lämpöpumpupoolin ohjaamista voidaan käyttää erilaisiin sovelluksiin kuten huipputehon rajoittamiseen verkossa tai sähköntuotannon ja -kulutuksen tasapainottamiseen. Aggregaattorin hallinnoimaa lämpöpumppupoolia voidaan käyttää esimerkiksi kysyntäjouston tehokkaaseen toteuttamiseen. Aggregaattorille lämpöpumpupoolin ohjaaminen taas on tuottoa tavoittelevaa liiketoimintaa, jolla se osallistuu sähkömarkkinoille.
+Yksi suosituimmista järjestelmien ohjauksen mahdollistavista tekniikoista on Modbus-standardi. Standardi määrittelee fyysisen tason rajapinnat mahdolistaen ohjauksen joko sarjaliitäntää tai ethernet-liitäntää käyttäen, mikä mahdollistaa protokollan käyttämisen paikallisesti tai internetin yli toimivien etäyhteyksien välityksellä. Modbus-standardin määritellessä kommunikointia vain hyvin matalalla tasolla on sitä helppo soveltaa erilaisiin sovelluksiin ja sen päälle voidaan rakentaa korkeamman tason viestintä- ja ohjausprotokollia. Modbusin päälle voidaan myöskin toteuttaa yksittäisen laitteen ohjaukseen ja monitorointiin tarvittavat sovellukset tai liittäminen kotiautomaatioon osaksi älykästä kotia. 
+
+Aurinkosähköjärjestelmien ja energiavarastojen osalta työssä tarkasteltiin muutamia eri rajapintoja, joista tärkein on SunSpec Modbus. Se pohjautuu Modbus-standardiin, ja sen avulla voidaan ohjata energiavarastojen ja aurinkoinverttereiden toimintaa, esimerkiksi rajoittaa tehoa tai säätää loistehontuotantoa. Suurin käyttö tällä rajapinnalla on paikallisessa automaatiossa, esimerkiksi tuotantotietojen käyttö kuormanohjaukseen.
+
+Lämpöpumppujen kohdalla korkeamman tason rajapintoja kuten SG-Ready-ohjausrajapintaa tai Saksalaista EVU-Sperre-ohjausrajapintaa käyttävät sovellukset taas keskittyvät yhden lämpöpumpun sijasta useamman pumpun muodostamaan pooliin. Lämpöpumpupoolin ohjaamista voidaan käyttää erilaisiin sovelluksiin kuten huipputehon rajoittamiseen verkossa tai sähköntuotannon ja -kulutuksen tasapainottamiseen. Aggregaattorin hallinnoimaa lämpöpumppupoolia voidaan käyttää esimerkiksi kysyntäjouston tehokkaaseen toteuttamiseen. Aggregaattorille lämpöpumpupoolin ohjaaminen taas on pääasiallista liiketoimintaa, jolla se osallistuu sähkömarkkinoille.
+
+Työssä tarkasteltiin kuutta eri sidosryhmää, joista Fingrid on sidoksissa vain aurinkosähköjärjestelmiin. TODO: sidosryhmät loppuun ja sovellukset
