--- a/tex/johdanto.tex
+++ b/tex/johdanto.tex
@@ -10,6 +10,8 @@ Lämpöpumppujen käyttö kiinteistöjen lämmitykseen kasvattaa suosiotaan. Vuo
 
 Lämpöpumppujen kasvanut suosio avaa myös uusia mahdollisuuksia. Suuria määriä lämpöpumppuja voidaan ohjata yhtenä poolina eli ryhmänä. Poolina ohjaamalla voidaan toteuttaa kysyntäjoustoa jopa kansallisella tasolla ja vakauttaa säkövekon taajuutta ja jännitettä. Lämöpumppupooleja voidaan käyttää myös virtuaalivoimaloina ja niiden joustokapasiteettia voidaan myydä siitä maksaville\parencite{ShenJiangLi, fischerTriebelSelinger}.
 
-Lämpöpumppuja ja aurinkosähköinverttereitä on siis mahdollista käyttää osana älykästä sähköverkkoa. Niiden ohjaus tapahtuu erilaisten standardoitujen rajapintojen kautta. Laitevalmistajien on tarjottava nämä rajapinnat. Rajapintoja voidaan hyödyntää monilla tavoilla ja monia valmiita teknisiä ratkaisuja on olemassa.
+Lämpöpumppuja ja aurinkosähköinverttereitä on siis mahdollista käyttää osana älykästä sähköverkkoa. Niiden ohjaus tapahtuu erilaisten standardoitujen rajapintojen kautta, jotka laitevalmistajien on tarjottava. Rajapintoja voidaan hyödyntää monilla tavoilla ja monia valmiita teknisiä ratkaisuja on olemassa.
+
+Tämän työn tarkoitus on tutkia, millaisia rajapintoja lämpöpumpuilla ja aurinkosähköjärjestelmillä on, millaisia sidosryhmät ja niiden tarpeet ovat. Lisäksi työn tarkoitus on erityisesti vastata kysymykseen, mihin rajapintoja voidaan hyödyntää ja millaisia sovelluksia ne mahdollistavat.
 
 Tässä työssä tarkastellaan aurinkosähköjärjestelmän ja sähkökäyttöisten lämpöpumppujen komponentteja ja toimintaa yleisellä tasolla järjestelmien ymmärtämiseksi. Tämän jälkeen perehdytään järjestelmien kommunikaatiorajapintoihin, niiden toimintaan ja niitä määrittäviin standardeihin. Lisäksi tarkastellaan rajapintojen hyödyntämismahdollisuuksia eri sovelluksissa ja eri sidosryhmien näkökulmasta. Sidosryhmien osalta työssä käsitellään Suomessa sijaitsevien järjestelmien kannalta relevantteja sidosryhmiä. Työssä ei ole tarkoitus käydä läpi sähköverkon ulko-puolella olevia ”off-grid” -järjestelmiä.
