--- a/tex/yhteenveto.tex
+++ b/tex/yhteenveto.tex
@@ -12,4 +12,8 @@ Aurinkosähköjärjestelmien ja energiavarastojen osalta työssä tarkasteltiin 
 
 Lämpöpumppujen kohdalla korkeamman tason rajapintoja kuten SG-Ready-ohjausrajapintaa tai Saksalaista EVU-Sperre-ohjausrajapintaa käyttävät sovellukset taas keskittyvät yhden lämpöpumpun sijasta useamman pumpun muodostamaan pooliin. Lämpöpumpupoolin ohjaamista voidaan käyttää erilaisiin sovelluksiin kuten huipputehon rajoittamiseen verkossa tai sähköntuotannon ja -kulutuksen tasapainottamiseen. Aggregaattorin hallinnoimaa lämpöpumppupoolia voidaan käyttää esimerkiksi kysyntäjouston tehokkaaseen toteuttamiseen. Aggregaattorille lämpöpumpupoolin ohjaaminen taas on pääasiallista liiketoimintaa, jolla se osallistuu sähkömarkkinoille.
 
-Työssä tarkasteltiin kuutta eri sidosryhmää, joista Fingrid on sidoksissa vain aurinkosähköjärjestelmiin. TODO: sidosryhmät loppuun ja sovellukset
+Työssä tarkasteltiin kuutta eri sidosryhmää, joista Fingrid on sidoksissa vain aurinkosähköjärjestelmiin. Järjestelmän omistaja ja laitteiston valmistaja voivat hyödyntää valmistajan pilvipalvelua etäohjaukseen ja järjestelmän monitorointiin. Verkonhaltija voi taas käyttää AMI-mittareiden tarjoamaa rajapintaa huoltotöiden aikaiseen tuotannon alasajoon. Aggregaattori pystyy tarjoamaan kysyntäjoustoa sähkömarkkinoille esimerkiksi integroimalla verkkovoimalaitokseen AMI-mittareiden kuormanohjausreleitä tai eri valmistajien pilvipalveluita. Paikallisia, fyysisiä rajapintoja voi hyödyntää kiinteistöautomaatio, joka voi olla kiinteistölle räätälöitävä ohjausjärjestelmä tai vaihtoehtoisesti palveluna toimitettu valmis ohjausjärjestelmä.
+
+Tärkeimmiksi sovelluksiksi näimme järjestelmien etäohjauksen ja -monitoroinnin, kysyntäjouston, aurinkosähkön kustannustehokkaan hyödyntämisen sekä loistehon kompensoinnin. Etäohjaus ja -monitorointi mahdollistaa tuotannon tarkkailun sekä vikatilojen selvittämisen etänä, mutta myös monien muiden sovellusten kehittämisen. Kysyntäjousto voidaan jakaa aggregaattorin hallinnoimiin verkkovoimalaitoksiin ja huipputehon rajoittamiseen. Tämä sovellus on sähköverkon kannalta tärkein, sillä se mahdollistaa uusiutuvien energianlähteiden suuremman määrän verkossa, mutta myös verkon tehokkaamman hyödyntämisen käyttöpistekohtaista tehoa säätämällä. 
+
+Aurinkosähkön kustannustehokas hyödyntäminen on lähtöisin kuluttajan tuottohinnan ja ostohinnan erosta, jolloin tuotettu sähkö on järkevämpää hyödyntää itse kuin myydä verkkoon. Loistehon kompensaatiosta hyötyy eniten teollisuusyritykset, jotka tarvitsevat joka tapauksessa tuotantolaitteiden tehokertoimen takia loistehon kompensointia. Suurilla inverttereillä voidaan kompensoinnin lisäksi pienentää ostosähkön määrää, jolloin järjestelmän takaisinmaksuaika on lyhyempi kuin perinteisillä kompensointimenetelmillä.
