--- a/tex/jarjestelmat_sahkon_tuottajina.tex
+++ b/tex/jarjestelmat_sahkon_tuottajina.tex
@@ -61,13 +61,13 @@ Lähes kaikki verkon käyttöpaikat ovat verkonhaltijan sähkömittarin takana. 
 \subsection{Ketjuinvertteri}
   Ketjuinvertteriin kytketään nimensä mukaisesti sarjaan kytketyistä paneeleista muodostettuja ketjuja. Siinä on usein monta huipputehopisteen seurannan kytkentää, jolloin saadaan seurattua useita huipputehopisteitä invertteriä kohden. Invertterien teho vaihtelee muutamasta kilowatista jopa satoihin kilowatteihin, jolloin sitä voidaan käyttää hyvin erikokoisissa järjestelmissä.
 
-  Teholuokaltaan pienet ketjuinvertterit on suunniteltu käyttäjäystävällisyyshuomioiden, ja esimerkiksi SMA:n ja Huawein invertterit sisältävät integraation valmistajien taustajärjestelmiin. SMA on toteuttanut tämän integraation valmiina, kun taas osa Huawein inverttereistä vaatii sovittimen Ethernet-portin, WLANin tai matkapuhelinverkon käyttämiseen datasiirrossa.
+  Teholuokaltaan pienet ketjuinvertterit on suunniteltu käyttäjäystävällisyyshuomioiden, ja esimerkiksi SMA:n ja Huawein invertterit sisältävät integraation valmistajien taustajärjestelmiin. SMA on toteuttanut tämän integraation valmiina laitteelle, kun taas osa Huawein inverttereistä vaatii sovittimen Ethernet-portin, WLANin tai matkapuhelinverkon käyttämiseen datasiirrossa.
 
-  SMAn invertterit käyttävät lisäksi SunSpec Alliancen Modbus-standardia, joka toimii Ethernet-portin välityksellä. Muut standardia hyödyntävät valmistajat voivat kommunikoida suoraan SMAn inverttereiden kanssa standardoinnin takia. Huawei käyttää myös Modbus-protokollaa, mutta se ei ole SunSpec Alliancen standardoima. Tämä tarkoittaa, että Huawein kanssa kommunikoitaessa sille on kehitettävä oma rajapinta datan lukemiseksi.
+  SMAn invertterit käyttävät lisäksi SunSpec Alliancen Modbus-standardia, joka toimii Ethernet-portin välityksellä. Muut standardia hyödyntävät valmistajat voivat kommunikoida suoraan SMAn inverttereiden kanssa standardoinnin takia. Huawei käyttää myös Modbus-protokollaa, mutta se ei ole SunSpec Alliancen standardoima. Tämä tarkoittaa, että Huawein kanssa kommunikoitaessa sille on räätälöitävä ohjelmistoa datan lukemiseksi.
 
   Modbusin hyödyntäminen mahdollistaa muiden valmistajien tuotteiden kommunikaation inverttereiden kanssa. Yhteinen standardi helpottaa suurissa järjestelmissä eri valmistajien tuotteiden yhteensopivuuden kanssa, mutta ylipäätään Modbusin käyttö antaa mahdollisuuden kolmannen osapuolen tuotteiden liittämiseen.
 
 \section{Järjestelmien tuotto-ominaisuudet}
-  Aurinkosähköjärjestelmät ovat sähköntuottajina teholtaan nopeasti muuttuvia. Niiden tuoton ennustaminen on jokseenkin mahdollista päivätasolla, mutta tunti- ja minuuttitason ennustaminen on haastavaa, jopa mahdotonta. Nykyisellä keskitettyyn sähköntuotantoon rakennetulla verkolla tämä aiheuttaa kuormitusta ja lisää säätövoiman tarvetta huomattavasti, mikäli aurinkosähkön tuotannon osuus kokonaistuotannosta kasvaa suureksi.
+  Aurinkosähköjärjestelmät ovat sähköntuottajina teholtaan nopeasti muuttuvia. Niiden tuoton ennustaminen on jokseenkin mahdollista päivätasolla, mutta tuntitason ennustaminen on jo haastavaa. Nykyisellä keskitettyyn sähköntuotantoon rakennetulla verkolla tämä aiheuttaa kuormitusta ja lisää säätövoiman tarvetta huomattavasti, mikäli aurinkosähkön tuotannon osuus kokonaistuotannosta kasvaa suureksi.
 
-  Säätövoiman tarvetta voidaan helpottaa energiavarastojen avulla, jolloin energiantuotantoa voidaan "jatkaa" muutama tunti myöhemmäksi, jolloin myös hitaammin reagoivia voimalaitoksia voidaan hyödyntää paremmin säätövoimana. Energiavarastot tasaavat myös aurinkosähkön tuotannon ailahtelevuutta ja lisäävät ennustettavuutta.
+  Säätövoiman tarvetta voidaan helpottaa energiavarastojen avulla, jolloin energiantuotantoa voidaan "jatkaa" muutama tunti myöhemmäksi, jolloin myös hitaammin reagoivia voimalaitoksia voidaan hyödyntää paremmin säätövoimana. Energiavarastot tasaavat myös aurinkosähkön tuotannon ailahtelevuutta ja tuovat mahdollisuuden ohjata tuotantoa suuremman kysynnän ajalle.
