--- a/tex/sovellukset.tex
+++ b/tex/sovellukset.tex
@@ -20,7 +20,7 @@ Tässä kappaleessa käydään läpi erilaisia rajapintoja hyödyntäviä tai ni
 
   Kun lämpöpumppua pystytään monitoroinnin lisäksi myös ohjaamaan etänä, puhutaan etähallinnasta. Toisin kuin pelkästä monitoroinnista, lämpöpumpun etähallinnasta saattaa olla enemmän käytännön hyötyä myös omakotitaloasujalle. Etähallinnalla voidaan saavuttaa energian säästöä eri tavoilla. Etähallinta mahdollistaa muun muassa matalamman sisälämpötilan ylläpitämisen asukkaiden ollessa poissa, minkä jälkeen voidaan nostaa asunnon lämpötilaa juuri ennen asukkaiden paluuta kotiin. Kesällä sama periaate pätee jäähdytykseen, mikäli käytettävä lämpöpumppu toimii myös jäähdyttävänä järjestelmänä. Tälläistä saatetaan kutsua esimerkiksi lomatoiminnoksi. Etähallintasovelluksesta on myöskin helppo tehdä intuitiivinen käyttää, koska käyttöliittymä voidaan tuoda kiinteästi lämpöpumpun yhteyteen asennetuista sulautetuista käyttöliittymistä käyttäjän omalle laitteelle.
 
-  Aurinkosähköjärjestelmän etähallinnalla ei kotitalouksissa ole tarvetta, sillä järjestelmä on suunniteltu toimimaan jatkuvasti parhaalla tuotolla. Etähallinnasta voi tosin olla kiinnostunut tulevaisuudessa verkonhaltija, sillä se voi muuttaa esimerkiksi sen käyttäytymistä eri jännite- tai taajuusalueilla, tai pakottaa koko järjestelmän pysäyttämisen esimerkiksi verkon huoltotöiden ajaksi. Tällä hetkellä verkonhaltijan etäkäytön estää oikeastaan puuttuvat järjestelmäintegraatiot, sillä nykyisiin energiamittareihin ei ole integroitu kommunikaatiota ulkoisille laitteille. Aurinkoinverttereiden integrointi verkonhaltijan \gls{SCADA}-järjestelmään on toki mahdollista, mutta se on järkevää vain suuremmissa järjestelmissä nykyisillä standardeilla, sillä verkonhaltijalla ei ole kaksisuuntaista kommunikaatiota kotitalouksiin ennestään.
+  Aurinkosähköjärjestelmän etähallinnalla ei kotitalouksissa ole tarvetta, sillä järjestelmä on suunniteltu toimimaan jatkuvasti parhaalla tuotolla. Etähallinnasta voi tosin olla kiinnostunut tulevaisuudessa verkonhaltija ja aggregaattori, sillä ne voivat muuttaa esimerkiksi järjestelmän käyttäytymistä eri jännite- tai taajuusalueilla, tai pakottaa koko järjestelmän pysäyttämisen esimerkiksi verkon huoltotöiden ajaksi. Tällä hetkellä etäkäytön estää oikeastaan puuttuvat järjestelmäintegraatiot, sillä nykyisiin energiamittareihin ei ole integroitu kommunikaatiota ulkoisille laitteille. Aurinkoinverttereiden integrointi verkonhaltijan \gls{SCADA}-järjestelmään on toki mahdollista, mutta se on järkevää vain suuremmissa järjestelmissä nykyisillä standardeilla, sillä verkonhaltijalla ei ole kaksisuuntaista kommunikaatiota kotitalouksiin ennestään.
 
   Kommunikointi lämpöpumpun ja asiakkaan päätelaitteen, joka voi olla esimerkiksi puhelin tai tietokone, voi tapahtua monella erilaisella tavalla. Monet lämpöpumppuvalmistajat tarjoavat lämpöpumppuihinsa lisäpalveluna etäohjaustoiminnallisuutta, joka näyttäytyy käyttäjälle esimerkiksi mobiilisovelluksena tai selaimessa käytettävänä verkkosovelluksena. Lämpöpumpputoimittajan tarjoamissa ratkaisuissa ei vaadita käyttäjältä yleensä sen suurempaa perehtymistä tai asiantuntemusta. Toimittaja saattaa myös tarjota valmiita ratkaisuja lämpöpumpun integroimiseen taloautomaation kanssa.
 
@@ -44,7 +44,7 @@ Tässä kappaleessa käydään läpi erilaisia rajapintoja hyödyntäviä tai ni
 
   Virtuaalivoimala on yksi tapa toteuttaa kysyntäjoustoa. Virtuaalivoimala koostuu pienistä sähköä tuottavista yksiköistä tai yhdestä tai useammasta kuormasta, joiden tehonkulutusta ohjataan yhtenä yksikkönä. Virtuaalivoimalan omistaja myy sähkömarkkinoille joustokapasiteettia. Suuren sähkönkulutuksen aikana kantaverkkoyhtiö maksaa virtuaalivoimalaoperaattorille siitä, että voimalaan kuuluvissa kiinteistöissä tai muissa kulutuskohteissa vähennetään sähkön käyttöä hetkellisesti. Vastaavasti ylituotantotilanteessa kantaverkkoyhtiö voi ostaa virtuaalivoimalalta kulutusta vastaamaan sen hetkistä tuotantoa. Reservimarkkinoiden hinnat siis määrävät virtuaalivoimalasta saatavan taloudellisen hyödyn. Ostamaansa joustokapasiteettia kantaverkkoyhtiö Fingrid käyttää sähköenergiajärjestelmän tehotasapainon hallintaan. Virtuaalivoimalan ohjaus tapahtuu automaattisesti ja sitä voidaan ohjata esimerkiksi sähköverkon taajuuden mukaan.\parencite{fingrid}
 
-  Osa virtaaalivoimalan ympäristömerkityksestä koostuu siitä, ettei erillistä sähköntuotantolaitteistoa tarvitse rakentaa, vaan toiminta perustuu olemassa olevan tai tarpeeseen rakennettavan laitteiston lisähyödyntämiseen. Mikäli virtuaalivoimala koostuu kulutustaan vähentävistä yksiköistä, ei fingridin voimalaitoksille tarkoitetut verkkoonliittymismääräykset ole päteviä\parencite{VJV2018}.
+  Osa virtuaalivoimalan ympäristömerkityksestä koostuu siitä, ettei erillistä sähköntuotantolaitteistoa tarvitse rakentaa, vaan toiminta perustuu olemassa olevan tai tarpeeseen rakennettavan laitteiston lisähyödyntämiseen. Mikäli virtuaalivoimala koostuu kulutustaan vähentävistä yksiköistä, ei fingridin voimalaitoksille tarkoitetut verkkoonliittymismääräykset ole päteviä\parencite{VJV2018}.
 
   Virtuaalivoimala voidaan koostaa kohteista, joissa energiaa saadaan varastoitua väliaikaisesti. Energiaa voidaan varastoida käyttökohteessa esimerkiksi akkuihin, josta esimerkkinä toimii kauppakeskus Sellon virtuaalivoimala Espoossa\parencite{sello}. Myöskin sähköautojen akkuja voidaan käyttää energian varastointiin, tällöin puhutaan \gls{V2G}-tekniikasta\parencite{dictOfEnergy}. Mikäli energiaa varastoidaan itsenäisesti toimivaan suureen akustoon, tai esimerkiksi paineilmavoimalaitokseen tai pumppuvoimalaitokseen, puhutaan silloin yleensä sähköenergian varastoinnista, eikä virtuaalivoimalasta\parencite{dictOfEnergy}.
 
@@ -81,7 +81,7 @@ Tässä kappaleessa käydään läpi erilaisia rajapintoja hyödyntäviä tai ni
 
   Rajapinnat ja niitä hyödyntävät sovellukset tuovat haasteita ja mahdollisia haittavaikutuksia. Kuten monesti uuden tekniikan käyttöönottoon liittyy, turvallisuusnäkökulma saattaa jäädä aluksi huomioimatta. Osa haasteista saattaa taas ilmetä vasta testattaessa tekniikoita käytännössä tai kun niiden käyttö alkaa olemaan laajalle levinnyttä.
 
-  Lämpöpumppuja kytketään verkkoon, jotta käyttäjät voivat etäohjata sitä tai jotta sitä voidaan ohjata aggregaattorin toimesta osana lämpöpumppupoolia. Erään riskityypin muodostavat vahingossa tai huolimattomuuttaan avoimeksi jätetyt ohjausrajapinnat. TCP-portteja voi olla avoinna niin, että kolmas osapuoli voi koittaa avata telnet- tai ssh-yhteyksiä laitteeseen. Mikäli yhteyden saa avattua käyttäen vakiokäyttäjätunnuksia ja -salasanoja, tai mahdollisesti täysin ilman tunnistautumista, ovat laitteet käytännössä kenen tahansa käytettävissä.
+  Lämpöpumppuja kytketään verkkoon, jotta käyttäjät voivat etäohjata sitä tai jotta sitä voidaan ohjata aggregaattorin toimesta osana lämpöpumppupoolia. Erään riskityypin muodostavat vahingossa tai huolimattomuuttaan avoimeksi jätetyt ohjausrajapinnat. TCP-portteja voi olla avoinna niin, että kolmas osapuoli voi yrittää avata telnet- tai ssh-yhteyksiä laitteeseen. Mikäli yhteyden saa avattua käyttäen vakiokäyttäjätunnuksia ja -salasanoja, tai mahdollisesti täysin ilman tunnistautumista, ovat laitteet käytännössä kenen tahansa käytettävissä.
 
   Jos laitteisiin otetaan yhteyttä salaamattomilla protokollilla, voidaan ohjausliikenteestä kerätä tietoja, joiden päätyminen ulkopuolisten käsiin ei ole haluttua. Mahdollisia kerättäviä tietoja voivat olla esimerkiksi asukkaan läsnäolo tai tieto peseytymisajoista, joiden vuotaminen ulkopuolisille voi vaikuttaa vähintääkin turvallisuudentunteeseen. Ammattimainen rikollisuus voi myös käyttää näitä tietoja rikosten suunnitteluun, sillä tiedoilla pystyy määrittämään hyvinkin tarkasti, milloin koti on tyhjillään ja haavoittumaisimmillaan.
 
