--- a/tex/yhteenveto.tex
+++ b/tex/yhteenveto.tex
@@ -1,8 +1,8 @@
-Lämpöpumppujen ja aurinkosähköjärjestelmien merkitys sähkoverkossa kasvaa niiden suosion kasvaessa. Lämpöpumput korvaavat muita lämmitys- ja viilennysmuotoja ja aurinkosähköjärjestelmillä haetaan kotitalouksissa omavaraisuutta ja säästöjä sähkölaskussa. 
+Lämpöpumppujen ja aurinkosähköjärjestelmien merkitys sähköverkossa kasvaa niiden suosion kasvaessa. Lämpöpumput korvaavat muita lämmitys- ja viilennysmuotoja ja aurinkosähköjärjestelmillä haetaan kotitalouksissa omavaraisuutta ja ylipäätään säästöjä sähkölaskussa. 
 
 Aurinkosähköjärjestelmien määrän kasvu lisää sähköverkon tuotannon ailahtelevuutta ja säätövoiman tarvetta, sillä tuotanto vaihtelee tunneittain. Tuotantoa voidaan ennustaa sääennusteen pohjalta, mutta yksittäiset pilvet voivat aiheuttaa aluellisesti nopeitakin tehovaihteluita. Lisäksi huipputeho sijoittuu päiväsaikaan, joten ihmisten palatessa töistä ja kulutuksen kasvaessa tuotannon laskiessa samanaikaisesti säätötehon tarve kasvaa entisestään. 
 
-Lämpöpumppujen lisääntyminen ja esimerikiksi suorasta sähkölämmityksestä eroava käyttäytyminen vaikuttavat sähköverkkoon. Lämpöpumppujen tekniikka kehittyy ja nykyisin kotitalouskäyttöön myytävissä pumpuissa on yleensä suoraan verkkoon kytketyn oikosulkumoottorin tilalla taajuusmuuttajakäyttöinen oikosulkumoottori. Tämä kehitys myös osaltaan märittelee miten verkkoon liitettyjen lämpöpumppujen määrän kasvu vaikuttaa sähköverkkoon. Ilman taajuusmuuttajaa tai pehmokäynistintä verkkoon kytketyt lämpöpumput ottavat käynnistyessään verkosta suuria hetkellisiä tehoja, mikä saattaa jännitejäykkyydeltään huonossa verkossa aiheuttaa hetkellisiä jännitteenalenemia. Lämöpumpun ollessa taajuusmuuttajakäyttöinen, ei se aiheuta edellämainittuja tehonkulutuksen piikkejä. Kuitenkin mikäli lämpöpupulla korvataan jokin muu lämmitysmuoto, kuin suora sähkölämmitys, kasvattaa se kulutuspaikan energiankulutusta. Mikäli muuntopiirissä moni talous vaihtaa lämmitysmuodokseen lämpöpumpun, saattaa se aiheuttaa tarpeen sähköverkon jännitejäykkyyden parantamiselle.
+Lämpöpumppujen lisääntyminen ja esimerikiksi suorasta sähkölämmityksestä eroava käyttäytyminen vaikuttavat sähköverkkoon. Lämpöpumppujen tekniikka kehittyy ja nykyisin kotitalouskäyttöön myytävissä pumpuissa on yleensä suoraan verkkoon kytketyn oikosulkumoottorin tilalla taajuusmuuttajakäyttöinen oikosulkumoottori. Tämä kehitys myös osaltaan märittelee miten verkkoon liitettyjen lämpöpumppujen määrän kasvu vaikuttaa sähköverkkoon. Ilman taajuusmuuttajaa tai pehmokäynnistintä verkkoon kytketyt lämpöpumput ottavat käynnistyessään verkosta suuria hetkellisiä tehoja, mikä saattaa jännitejäykkyydeltään huonossa verkossa aiheuttaa hetkellisiä jännitteenalenemia. Lämpöpumpun ollessa taajuusmuuttajakäyttöinen, ei se aiheuta edellämainittuja tehonkulutuksen piikkejä. Kuitenkin mikäli lämpöpumpulla korvataan jokin muu lämmitysmuoto, kuin suora sähkölämmitys, kasvattaa se kulutuspaikan energiankulutusta. Mikäli muuntopiirissä moni talous vaihtaa lämmitysmuodokseen lämpöpumpun, saattaa se aiheuttaa tarpeen sähköverkon jännitejäykkyyden parantamiselle.
 
 Järjestelmien tuomia haasteita voidaan ratkaista ja löytää uusia järjestelmiä hyödyntäviä sovelluksia, kun kommunikaatio niiden kanssa mahdollista. Kommunikointi mahdollistetaan standardoiduilla kommunikaatiorajapinnoilla, joiden kautta järjestelmiä voidaan ohjata. Tällöin ne voidaan kytkeä esimerkiksi kiinteistöautomaatioon tai muuhun ulkoiseen ohjaukseen. Valmistajien suljetut pilvipalvelut muodostavat myös erään rajapinnan kommunikaatiolle, joihin pääsy on usein vain valmistajalla ja järjestelmän omistajalla. 
 
@@ -16,4 +16,4 @@ Työssä tarkasteltiin kuutta eri sidosryhmää, joista Fingrid on sidoksissa va
 
 Tärkeimmiksi sovelluksiksi näimme järjestelmien etäohjauksen ja -monitoroinnin, kysyntäjouston, aurinkosähkön kustannustehokkaan hyödyntämisen sekä loistehon kompensoinnin. Etäohjaus ja -monitorointi mahdollistaa tuotannon tarkkailun sekä vikatilojen selvittämisen etänä, mutta myös monien muiden sovellusten kehittämisen. Kysyntäjousto voidaan jakaa aggregaattorin hallinnoimiin verkkovoimalaitoksiin ja huipputehon rajoittamiseen. Tämä sovellus on sähköverkon kannalta tärkein, sillä se mahdollistaa uusiutuvien energianlähteiden suuremman määrän verkossa, mutta myös verkon tehokkaamman hyödyntämisen käyttöpistekohtaista tehoa säätämällä. 
 
-Aurinkosähkön kustannustehokas hyödyntäminen on lähtöisin kuluttajan tuottohinnan ja ostohinnan erosta, jolloin tuotettu sähkö on järkevämpää hyödyntää itse kuin myydä verkkoon. Loistehon kompensaatiosta hyötyy eniten teollisuusyritykset, jotka tarvitsevat joka tapauksessa tuotantolaitteiden tehokertoimen takia loistehon kompensointia. Suurilla inverttereillä voidaan kompensoinnin lisäksi pienentää ostosähkön määrää, jolloin järjestelmän takaisinmaksuaika on lyhyempi kuin perinteisillä kompensointimenetelmillä.
+Aurinkosähkön kustannustehokas hyödyntäminen on lähtöisin kuluttajan tuottohinnan ja ostohinnan erosta, jolloin tuotettu sähkö on järkevämpää hyödyntää itse kuin myydä verkkoon. Loistehon kompensaatiosta hyötyvät eniten teollisuusyritykset, jotka tarvitsevat joka tapauksessa tuotantolaitteiden tehokertoimen takia loistehon kompensointia. Suurilla inverttereillä voidaan kompensoinnin lisäksi pienentää ostosähkön määrää, jolloin järjestelmän takaisinmaksuaika on lyhyempi kuin perinteisillä kompensointimenetelmillä.
