--- a/tex/sidosryhmat.tex
+++ b/tex/sidosryhmat.tex
@@ -8,7 +8,7 @@ Luonnollisesti eri sidosryhmät ovat kiinnostuneet erilaisiin käyttötarkoituks
 \end{figure}
 
 \section{Kantaverkkoyhtiö Fingrid}
-  Suomen kantaverkkoyhtiönä Fingrid asettaa vaatimuksia siihen liittyen, mitä rajapintoja järjestelmien on sisällettävä. Se vaatii alle 1MW järjestelmien (voimalaitosten) sisältämään logiikkaportin, jonka kautta saapuvalla käskyllä voimalaitoksen on lopetettava pätötehon tuotanto viiden sekunnin kuluessa. Yli 1MW:n suuruiset järjestelmät tulee taas varustaa väyläliitännällä, jolla voidaan alentaa tuotannon pätötehoa annetun ohjearvon mukaisesti. Tämän liitännän on oltava yhteensopiva IEC60870-6, IEC60870-5 tai IEC61850 -protokollan kanssa. Fingrid ei dokumentissaan kuitenkaan ilmoita, täytyykö tämän liitännän olla käytössä, vai riittääkö että järjestelmässä on liitäntä olemassa. \parencite{VJV2018}
+  Suomen kantaverkkoyhtiönä Fingrid asettaa vaatimuksia siihen liittyen, mitä rajapintoja järjestelmien on sisällettävä. Se vaatii alle 1MW järjestelmien (voimalaitosten) sisältämään logiikkaportin, jonka kautta saapuvalla käskyllä voimalaitoksen on lopetettava pätötehon tuotanto viiden sekunnin kuluessa. Yli 1MW:n suuruiset järjestelmät tulee taas varustaa väyläliitännällä, jolla voidaan alentaa tuotannon pätötehoa annetun ohjearvon mukaisesti. Tämän liitännän on oltava yhteensopiva IEC60870-6, IEC60870-5 tai IEC61850 -protokollan kanssa. Fingrid ei dokumentissaan kuitenkaan ilmoita, täytyykö näiden liitäntöjen olla käytössä, vai riittääkö että järjestelmissä on liitäntä olemassa. \parencite{VJV2018}
 
   Mikäli Fingridin voimajohtoon liitettävä voimalaitos on yli 1MW:n tehoinen, se on varustettava eroonkytkentäreleistyksellä. Yli 5MW:n tehoinen voimalaitos vaatii lisäksi eroonkytkennän viestiyhteyden pikajälleenkytkentöjen toiminnan varmistamiseksi. Jos taas voimalaitos liittyy suoraan tai Fingridin asiakkaan verkon kautta kantaverkon kytkinkenttään, ei eroonkytkentäreleistystä vaadita. Tahattoman saarekekäytön estäminen on joissain inverttereissä integroituna, jolloin ne tarkkailevat verkon tilaa ja huomattuaan saarekkeen muodostumisen, kytkeytyvät irti. Tällöin alle 5MW:n järjestelmät eivät tarvitse erillisiä laitteistoja eroonkytkentään, vaan invertteri toteuttaa itsessään jo tämän vaatimuksen. 
 
@@ -16,9 +16,11 @@ Luonnollisesti eri sidosryhmät ovat kiinnostuneet erilaisiin käyttötarkoituks
 
 \section{Verkonhaltija}
 
-  Yksi järjestelmien rajapintoihin liittyvistä sidosryhmistä on sähköverkonhaltija eli Suomessa sähköverkkoyhtiö. Vuodesta 2009 on Suomessa laki velvoittanut sähköverkkoyhtiöitä asentamaan sähkönkäyttöpaikoille eli pisteisiin, missä sähköä ostavat asiakkaat liittyvät verkkoon, tuntimittauslaitteiston. Asetus myös asettaa vaatimuksia käytetyllä tuntimittauslaittestolle muun muassa etäluettavuudesta ja -ohjattavuudesta.\parencite{mittariAsetus} Älykkäästä tuntimittauslaitteistosta käytetään usein termiä älymittari, \gls{AMR}-mittari tai \gls{AMI}-mittari. Termin \gls{AMR} viitatessa lähinnä mittarin automaattiseen luentaan, saattaisi \gls{AMI}-mittari olla oikeampi termi. Lyhenne \gls{AMI} tarkoittaa mittareiden muodostamaa järjestelmää, jossa tieto liikkuu myös kohti mittareita ja niiden takana olevia kiinteistöjä.\parencite{dictOfEnergy}
+  Yksi järjestelmien rajapintoihin liittyvistä sidosryhmistä on sähköverkonhaltija eli Suomessa sähköverkkoyhtiö. Vuodesta 2009 on Suomessa laki velvoittanut sähköverkkoyhtiöitä asentamaan sähkönkäyttöpaikoille eli pisteisiin, jossa sähköä ostavat asiakkaat liittyvät verkkoon, tuntimittauslaitteiston. Asetus myös asettaa vaatimuksia käytetyllä tuntimittauslaittestolle muun muassa etäluettavuudesta ja -ohjattavuudesta. \parencite{mittariAsetus} 
+  
+  Älykkäästä tuntimittauslaitteistosta käytetään usein termiä älymittari, \gls{AMR}-mittari tai \gls{AMI}-mittari. Termin \gls{AMR} viitatessa lähinnä mittarin automaattiseen luentaan, saattaisi \gls{AMI}-mittari olla oikeampi termi. Lyhenne \gls{AMI} tarkoittaa mittareiden muodostamaa järjestelmää, jossa tieto liikkuu myös kohti mittareita ja niiden takana olevia kiinteistöjä. \parencite{dictOfEnergy}
 
-  Verkonhaltija ei itsessään ole energian ostaja tai myyjä, vaan se siirtää sähkön verkossa ja on vastuussa verkon toimivuudesta. Tästä syystä verkonhaltija ei itse saa mittareiden etäohjauksesta paljoakaan hyötyä. Yksi hyöty verkonhaltijalle on kuitenkin sähkönkäyttöpaikan irrottaminen verkosta etänä, esimerkiksi laajemman huoltotyön ajaksi. Tällöin verkonhaltijan ei tarvitse käyttää resursseja käydäkseen jokaisessa sähkönkäyttöpaikassa irrottamassa sitä sähköverkosta ennen huoltotöitä.
+  Verkonhaltija ei itsessään ole energian ostaja tai myyjä, vaan se siirtää sähkön verkossa ja on vastuussa verkon toimivuudesta. Tästä syystä verkonhaltijan saamat hyödyt mittareiden etäohjauksesta ovat vähäiset. Yksi hyöty verkonhaltijalle on kuitenkin sähkönkäyttöpaikan irrottaminen verkosta etänä, esimerkiksi laajemman huoltotyön ajaksi. Tällöin verkonhaltijan ei tarvitse käyttää resursseja käydäkseen jokaisessa sähkönkäyttöpaikassa irrottamassa sen sähköverkosta ennen huoltotöitä.
 
   Lämpöpumput ovat todennäköisesti käyttöpaikkansa suurimpia sähkönkäyttäjiä. Käyttäjän kannalta olisi edullista, mikäli lämpöpumpun käyttämä sähkö hinnoiteltaisiin muusta käytetystä sähköstä erillään. Saksalaisessa EVU-Sparre-järjestelmässä lämpöpumppu on sähköntoimittajan ohjattavissa. Korvauksena kuormanohjauksesta kuluttaja saa hinnanalennusta lämpöpumpun käytetystä energiasta. Tämä tarkoittaa, että energiamittari, jonka kautta myös lämpöpumpun ohjaaminen tapahtuu, mittaa erikseen lämpöpumpun käyttämän energian.\parencite{enwg, VDEARN4100}
 
@@ -40,9 +42,13 @@ Luonnollisesti eri sidosryhmät ovat kiinnostuneet erilaisiin käyttötarkoituks
 
 \section{Aggregaattori}
 
-  Ennestään sähkömarkkinoilla on ollut käytännössä kolme toimijaa: Energian myyjä, siirtäjä ja ostaja. Aggregaattori näistä kaikista (mahdollisesti) erillinen toimja, jonka tehtävänä on myydä sähkömarkkinoille joustoa. Aggregaattori voi ohjata esimerkiksi lämpöpumppupoolia ja käydä kauppaa sen mahdollistamalla kysyntäjoustolla.
+  Ennestään sähkömarkkinoilla on ollut käytännössä kolme toimijaa: Energian myyjä, siirtäjä ja ostaja. Aggregaattori näistä kaikista (mahdollisesti) erillinen toimija, jonka tehtävänä on myydä sähkömarkkinoille joustoa. Aggregaattori voi ohjata esimerkiksi lämpöpumppupoolia ja käydä kauppaa sen mahdollistamalla kysyntäjoustolla.
 
   \gls{AMI}-mittaria voidaan hyödyntää kysyntäjoustossa, kun aggregaattori pystyy ohjaamaan lämpöpumpun toimintaa mittarin tarjoaman kuormanohjausreleen kautta. TODO: ERI TAVAT OHJATA KUORMANOHJAUSRELETTÄ
   
-  Aurinkosähköinvertterin ohjaukseen releohjaus ei suoraan sovellu, sillä inverttereiden ohjaus tapahtuu usein monimutkaisemmalla kommunikaatiolla, kuin yksinkertaisella releellä. Sinällään tämä ei haittaa, sillä aurinkosähköjärjestelmän hyödyt etäohjauksen osalta ovat vähäiset; tavoitteena on kuitenkin saada tuotettua mahdollisimman paljon energiaa, ja tämän invertteri hoitaa automaattisesti. Mikäli invertterit pystyvät kuitenkin tuottamaan loistehoa pätötehon tuotannosta riippumatta, tästä voi aggregaattori olla kiinnostunut, mikäli niitä voitaisiin ohjata virtuaalivoimalan tavoin isommissa ryhmissä. Tämä vaatii kuitenkin uuden ratkaisun, sillä nykyisillä tällainen ei ole mahdollista. Esimerkiksi standardoitu rajapinta pilvipalveluintegraatioihin eri valmistajien välillä voisi mahdollistaa tämän.
+  Aurinkosähköinvertterin ohjaukseen releohjaus ei suoraan sovellu, sillä inverttereiden ohjaus tapahtuu usein monimutkaisemmalla kommunikaatiolla, kuin yksinkertaisella releellä. Sinällään tämä ei haittaa, sillä aurinkosähköjärjestelmän hyödyt etäohjauksen osalta ovat vähäiset; tavoitteena on kuitenkin saada tuotettua mahdollisimman paljon energiaa, ja tämän invertteri hoitaa automaattisesti. 
+  
+  Mikäli invertterit pystyvät kuitenkin tuottamaan loistehoa pätötehon tuotannosta riippumatta, tästä voi aggregaattori olla kiinnostunut, mikäli niitä voitaisiin ohjata virtuaalivoimalan tavoin isommissa ryhmissä. Tämä vaatii kuitenkin uuden ratkaisun, sillä nykyisillä ratkaisuilla tällainen ei ole mahdollista. Esimerkiksi standardoitu rajapinta pilvipalveluintegraatioihin eri valmistajien välillä voisi mahdollistaa tämän.
+
+  Aggregaattori voi myös tulevaisuudessa mahdollisesti ohjata akullisia järjestelmiä virtuaalivoimalan tavoin. Tällöin on sovittava raja-arvot, millaisilla varaustasoilla aggregaattori voi säätää energiavarastoa. Tämäkään ei tosin onnistu releohjauksella, ellei valmistajat sovi yhdessä standardoitua tapaa ohjaukselle.
   
